--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="ExoHunter - AI-Powered Exoplanet Detection" />
     <meta property="og:description" content="Discover exoplanets using AI-powered light curve analysis. NASA Space Apps Challenge 2025." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@exohunter" />
